--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2021"
 name = "ahqstore_cli_rs"
-version = "0.5.5"
+version = "0.6.0"
 description = "AHQ Store CLI"
 repository = "https://github.com/ahqstore/cli"
 homepage = "https://github.com/ahqstore/cli"
@@ -32,7 +32,7 @@ chalk_rs = "1"
 lazy_static = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-ahqstore-types = "3.1.7"
+ahqstore-types = { version = "3", features = ["apps_repo"] }
 reqwest = { version = "0.12", features = ["json", "blocking"] }
 sha2 = "0.10"
 image = { version = "0.25", default-features = false, features = [
@@ -42,7 +42,7 @@ image = { version = "0.25", default-features = false, features = [
 rand = "0.8"
 
 [target.'cfg(unix)'.dependencies]
-openssl-sys = { version = "0.9.103", features = ["vendored"] }
+openssl-sys = { version = "0.9", features = ["vendored"] }
 
 [build-dependencies]
 napi-build = { version = "2", optional = true }
