--- a/.github/workflows/BINSTALL.yml
+++ b/.github/workflows/BINSTALL.yml
@@ -144,7 +144,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Rust Nightly
-        run: rustup toolchain add nightly-${{ matrix.target }}
+        run: rustup toolchain add nightly-${{ matrix.target }} --force-non-host
 
       - name: Linux Cross Platform
         if: matrix.os == 'ubuntu-latest'
